--- a/MacPatch/MPLoginAgent/MPLoginAgent/Base.lproj/MainMenu.xib
+++ b/MacPatch/MPLoginAgent/MPLoginAgent/Base.lproj/MainMenu.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="7706" systemVersion="14E46" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" customObjectInstantitationMethod="direct">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="7706" systemVersion="14F27" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" customObjectInstantitationMethod="direct">
     <dependencies>
         <deployment identifier="macosx"/>
         <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="7706"/>
@@ -44,7 +44,7 @@
                     <constraint firstItem="fD7-DC-PMu" firstAttribute="centerX" secondItem="EiT-Mj-1SZ" secondAttribute="centerX" id="KHU-2q-qeC"/>
                 </constraints>
             </view>
-            <point key="canvasLocation" x="403.5" y="390"/>
+            <point key="canvasLocation" x="497.5" y="387"/>
         </window>
         <viewController id="3a1-sp-R54" customClass="ScanAndPatchVC"/>
     </objects>
